kubernetes/apps/2048.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2048
  namespace: default
spec:
  selector:
    matchLabels:
      app: app2048
  replicas: 1
  template:
    metadata:
      labels:
        app: app2048
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: app2048
        image: registry.kelog.pl/kelog/2048:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 2048
        - containerPort: 8080
        resources:
          limits:
            memory: "100Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 30

---
apiVersion: v1
kind: Service
metadata:
  name: app2048
  namespace: default
spec:
  selector:
    app: app2048
  type: NodePort
  ports:
  - port: 8080
    name: infopage
  - port: 2048
    name: game
    targetPort: 2048
    nodePort: 32048

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2048
  namespace: default
spec:
  rules:
  - host: 2048.kelog.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2048
            port:
              number: 8080
