kubernetes/apps/smsalerts.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smsalerts-backend
spec:
  selector:
    matchLabels:
      app: smsalerts-backend
  replicas: 1
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: smsalerts-backend
    spec:
      automountServiceAccountToken: false # allow mounting the secret in known place
      containers:
      - name: smsalerts
        image: kelog/smsalerts:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "350Mi"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 30
        volumeMounts:
        - name: smsalerts-creds
          mountPath: /run/secrets
        - name: smsalerts-db
          mountPath: /db
      volumes:
      - name: smsalerts-creds
        secret:
          secretName: smsalerts-creds
          items:
          - key: recipient
            path: SMSALERTS_RECIPIENT
      - name: smsalerts-db
        persistentVolumeClaim:
          claimName: smsalerts-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smsalerts-frontend
spec:
  selector:
    matchLabels:
      app: smsalerts-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: smsalerts-frontend
    spec:
      containers:
      - name: smsalerts-frontend
        image: kelog/smsalerts-frontend:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "20Mi"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: smsalerts-backend
spec:
  selector:
    app: smsalerts-backend
  ports:
  - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: smsalerts-frontend
spec:
  selector:
    app: smsalerts-frontend
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smsalerts
spec:
  rules:
  - host: smsalerts.kelog.pl
    http:
      paths:
      - path: /
        backend:
          serviceName: smsalerts-frontend
          servicePort: 80
      - path: /api
        backend:
          serviceName: smsalerts-backend
          servicePort: 8080
      - path: /health
        backend:
          serviceName: smsalerts-backend
          servicePort: 8080
      - path: /info
        backend:
          serviceName: smsalerts-backend
          servicePort: 8080
      - path: /r
        backend:
          serviceName: smsalerts-backend
          servicePort: 8080
