kubernetes/apps/storage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
  namespace: default
spec:
  selector:
    matchLabels:
      app: storage
  replicas: 1
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - name: storage
        image: httpd
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs
          name: storage-volume
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          failureThreshold: 30
      volumes:
      - name: storage-volume
        hostPath:
          path: /var/k8s-hostpath/storage-data

---
apiVersion: v1
kind: Service
metadata:
  name: storage
  namespace: default
spec:
  selector:
    app: storage
  ports:
  - port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage
  namespace: default
spec:
  rules:
  - host: storage.kelog.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storage
            port:
              number: 80
