kubernetes/apps/zespolsdg.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: zespolsdg-redirect
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host ~ ^.*espolsdg\.pl$) {
        return 302 https://ustron.luteranie.pl/spolecznosc/zespol-soli-deo-gloria;
      }
spec:
  rules:
  - host: "zespolsdg.pl"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aleksandergrzybowskipl # doesn't matter
            port:
              number: 80
